# milvussync

./: .env.example  .gitignore  Dockerfile  README.md  manage.py  pyproject.toml  pytest.ini
milvussync/: asgi.py  logging.py  settings.py  urls.py  wsgi.py
sync/: apps.py  autosync.py  views.py
sync/embeddings/: bge_provider.py  openai_provider.py  reranker_provider.py
sync/management/commands/: backfill_milvus.py  insert_demo_tenders.py  run_consumer.py  run_producer.py  search_demo.py  seed_meilisearch.py  setup_demo.py  start_milvus_sync_consumer.py
sync/postgres/: connection.py  tender_repository.py
sync/tc_meilisearch/: client.py
sync/tc_milvus/: client.py  tender_search_client.py
sync/tc_pulsar/consumers/: base_consumer.py  milvus_sync_consumer.py  tender_search_consumer.py
sync/templates/sync/: _lang_badge.html  dashboard.html  pipeline.html  postgres.html  search.html
tests/: conftest.py  test_autosync.py  test_backfill_command.py  test_bge_provider.py  test_consumer.py  test_embedding_provider.py  test_meilisearch_client.py  test_milvus_client.py  test_payload_mapping.py  test_reranker_provider.py  test_rrf_fusion.py  test_tender_search_client.py
tests/fakes/: milvus.py  pulsar.py
