[tool.poetry]
name = "milvussync"
version = "0.1.0"
description = "Near real-time Milvus sync service for tender title embeddings"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.7"
python-decouple = "^3.8"
pulsar-client = "^3.7.0"
pymilvus = "^2.4.0"
openai = "0.28.1"
structlog = "^25.2.0"
tenacity = "^9.1.2"
requests = "^2.32.3"
psycopg2-binary = "^2.9"
sentence-transformers = "^3.0"
meilisearch = "^0.31"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-django = "^4.11.1"
pytest-cov = "^6.0"
coverage = "^7.10.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
